[gd_scene load_steps=4 format=2]

[ext_resource path="res://houses/house_exterior.gltf" type="PackedScene" id=1]
[ext_resource path="res://houses/house_interior.gltf" type="PackedScene" id=2]
[ext_resource path="res://camera.gd" type="Script" id=3]

[node name="main" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -70.0408, 21.0111, 0.0355625 )
far = 300.0
script = ExtResource( 3 )

[node name="exterior" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -70.0408, 21.0111, 0.0355625 )

[node name="__camera_hook" type="Spatial" parent="exterior"]
transform = Transform( -11.6083, 0, -11.7444, 0, 16.5131, 0, 11.7444, 0, -11.6083, -2.85817, 16.8368, 34.4515 )

[node name="__camera_target" type="Spatial" parent="exterior"]
transform = Transform( -11.6083, 0, -11.7444, 0, 16.5131, 0, 11.7444, 0, -11.6083, -33.0956, -6.21849, 4.41049 )

[node name="house_exterior" parent="exterior" instance=ExtResource( 1 )]
transform = Transform( -16.5131, 0, 1.44362e-06, 0, 16.5131, 0, -1.44362e-06, 0, -16.5131, -43.5339, -21.0111, -0.0355625 )

[node name="SpotLight3" type="SpotLight" parent="exterior"]
transform = Transform( 0.232833, 0.856764, 0.460157, -0.859554, -0.0400407, 0.509474, 0.454923, -0.514152, 0.727112, 7.83397, 17.4881, 64.9523 )
light_energy = 0.5
shadow_enabled = true
shadow_bias = 0.9
spot_range = 102.296
spot_angle = 60.4688

[node name="SpotLight4" type="SpotLight" parent="exterior"]
transform = Transform( 0.232833, 0.856764, 0.460157, -0.255847, -0.402532, 0.878926, 0.93826, -0.322373, 0.125478, 9.69239, 85.5554, 9.86796 )
light_energy = 0.5
shadow_enabled = true
shadow_bias = 0.9
spot_range = 102.296
spot_angle = 60.4688

[node name="interior" type="Spatial" parent="."]
transform = Transform( 0.470042, 0, -0.882644, 0, 1, 0, 0.882644, 0, 0.470042, 111.521, 21.0111, 0.0355606 )

[node name="SpotLight" type="SpotLight" parent="interior"]
transform = Transform( 0.212049, 0.512912, -0.831839, -0.126697, 0.858441, 0.497018, 0.969011, -7.68884e-09, 0.247016, 5.97617, 0.195435, 8.99224 )
light_color = Color( 1, 0.792157, 0.0745098, 1 )
light_energy = 1.2
shadow_enabled = true
spot_range = 59.1045
spot_angle = 16.8251

[node name="SpotLight2" type="SpotLight" parent="interior"]
transform = Transform( -0.0139868, 0.998396, 0.0548684, -0.24662, -0.0566231, 0.967457, 0.969011, -5.76664e-09, 0.247016, 38.3869, 14.0991, 8.99224 )
light_energy = 0.6
shadow_enabled = true
shadow_bias = 0.7
spot_range = 67.5051
spot_angle = 42.1875

[node name="__camera_hook" type="Spatial" parent="interior"]
transform = Transform( -13.6792, 0, -9.25001, 0, 16.5131, 0, 9.25001, 0, -13.6792, 56.2776, -4.23807, 19.9482 )

[node name="__camera_target" type="Spatial" parent="interior"]
transform = Transform( -13.6792, 0, -9.25001, 0, 16.5131, 0, 9.25001, 0, -13.6792, 34.8536, -22.26, -5.02593 )

[node name="house_interior" parent="interior" instance=ExtResource( 2 )]
transform = Transform( 1.2812, 0, 0, 0, 1.2812, 0, 0, 0, 1.2812, 33.3047, -21.0111, -0.0355625 )

[node name="show_interior" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -177.465
margin_top = 10.0
margin_right = -20.4655
margin_bottom = 30.0
text = "Show Interior"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="show_exterior" type="Button" parent="."]
margin_left = 9.0
margin_top = 10.0
margin_right = 166.0
margin_bottom = 30.0
text = "Show Exterior"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="show_interior" to="Camera" method="_on_show_interior_pressed"]
[connection signal="pressed" from="show_exterior" to="Camera" method="_on_show_exterior_pressed"]
